2010-10-02  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	Revert "parallel-tests: avoid command-line length limit issue."
	This reverts commit 24e3b4ee2f8cb9f72dd94a05a893f3d4e88b7835,
	because it re-opened the bug fixed by v1.11-10-g218e678.

	2010-09-07  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	parallel-tests: avoid command-line length limit issue.
	* automake.in (handle_tests): New argument $makefile, new
	substitution %MAKEFILE%.
	(generate_makefile): Adjust.
	* lib/am/check.am [%?PARALLEL_TESTS%] (check-TESTS): Pass
	sanitized TEST_LOGS value as makefile snippet on standard
	input to $(MAKE), to avoid exceeding the command line limit on
	w32 (MSYS).
	* NEWS: Update.
	Report by Bob Friesenhahn.

2010-09-26  Stefano Lattarini  <stefano.lattarini@gmail.com>

	Extend tests on `--help' and `--version' options.
	* tests/help.test: Create a new empty directory and chdir into
	it, rather than removing already present files.  Run the aclocal
	and automake wrapper scripts directly, instead of relying on
	$AUTOMAKE and $ACLOCAL.  Be sure to correctly match literal dots
	in aclocal's and automake's stderr.  Add a trailing `:' command.
	* tests/help2.test: New test, checking that options `--help' and
	`--version' works in directories with broken `configure.in'.
	* tests/help3.test: New test, checking that options `--help' and
	`--version' take precedence on the other options.
	* tests/help4.test: New test, checking that the first among the
	`--help' and `--version' options to be specified on the command
	line wins.
	* tests/Makefile.am (TESTS): Updated.

2010-09-25  Stefano Lattarini  <stefano.lattarini@gmail.com>

	Testsuite: Use `$PATH_SEPARATOR', not `:', when extending PATH.
	* tests/compile2.test: Do no uselessly (implicitly) repeat the
	computation of PATH_SEPARATOR again.
	* tests/instmany-mans.test: Use `$PATH_SEPARATOR', not `:', when
	extending/redefining PATH.
	* tests/instmany-python.test: Likewise.
	* tests/instmany.test: Likewise.