@@ -1,3 +1,12 @@
+2010-10-03  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
+
+	Document and fix expansion of variables before rules.
+	* doc/automake.texi (General Operation): Document that variables
+	are expanded before rules.
+	* lib/am/check.am (am__check_post): Reword a bit so it does not
+	get matched as a rule.
+	Suggestion by Ben Pfaff.
+
 2010-10-02  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
 	Revert "parallel-tests: avoid command-line length limit issue."
